1 添加jdk stbalevalue测试