@@ -11,10 +11,11 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.locks.LockSupport;
 import java.util.function.Supplier;
 
-@Warmup(iterations = 5, time = 200, timeUnit = TimeUnit.MICROSECONDS)
+@Warmup(iterations = 5, time = 200, timeUnit = TimeUnit.MILLISECONDS)
 @BenchmarkMode(Mode.Throughput)
 @Threads(value = 5)
-@Measurement(iterations = 2, time = 1, timeUnit = TimeUnit.SECONDS)
+@Measurement(iterations = 2, time = 100, timeUnit = TimeUnit.MILLISECONDS)
+@Fork(jvmArgsAppend = "--enable-preview")
 public class StableValueBenchmarkCase {
     private static final StableValue<String> value = StableValue.of(() -> {
         LockSupport.parkNanos(TimeUnit.SECONDS.toNanos(1));
@@ -25,7 +26,7 @@ public class StableValueBenchmarkCase {
 
     private static final StableValue<String> valueCondy;
 
-    private static final StableValueBenchmarkCase.TryDCLStableValue<String> tryStableValue = new StableValueBenchmarkCase.TryDCLStableValue<>(() -> {
+    private static final Supplier<String> jdkStableValue = java.lang.StableValue.supplier(() -> {
         LockSupport.parkNanos(TimeUnit.SECONDS.toNanos(1));
         return UUID.randomUUID().toString();
     });
@@ -76,21 +77,12 @@ public class StableValueBenchmarkCase {
     private static final StableValue<String> constant = () -> plain;
 
 
-
     @Benchmark
     public void testIndyStabValue(Blackhole bh) {
         for (int i = 0; i < 500_00; i++) {
             bh.consume(value.get());
         }
     }
-
-    @Benchmark
-    public void testTryStabValue(Blackhole bh) {
-        for (int i = 0; i < 500_00; i++) {
-            bh.consume(tryStableValue.get());
-        }
-    }
-
 
     @Benchmark
     public void testIndyStabValueHidden(Blackhole bh) {
@@ -128,6 +120,12 @@ public class StableValueBenchmarkCase {
         }
     }
 
+    @Benchmark
+    public void testJdkStableValue(Blackhole bh) {
+        for (int i = 0; i < 500_00; i++) {
+            bh.consume(jdkStableValue.get());
+        }
+    }
 
 
     public static class DCLStableValue<T> implements StableValue<T> {
@@ -151,46 +149,6 @@ public class StableValueBenchmarkCase {
                     return cache;
                 }
                 return cache = factory.get();
-            }
-        }
-    }
-
-
-    public static class TryDCLStableValue<T> implements StableValue<T> {
-        private static final VarHandle HANDLE;
-
-        public final Supplier<T> factory;
-
-        private T cache;
-
-        public TryDCLStableValue(Supplier<T> factory) {
-            this.factory = factory;
-        }
-
-
-        @Override
-        public T get() {
-            T res = (T) HANDLE.get(this);
-            if (res != null) {
-                return res;
-            }
-
-            synchronized (this) {
-                res = (T) HANDLE.getVolatile(this);
-                if (res != null) {
-                    return res;
-                }
-                res = factory.get();
-                HANDLE.setVolatile(this, res);
-                return res;
-            }
-        }
-
-        static {
-            try {
-                HANDLE = MethodHandles.lookup().findVarHandle(TryDCLStableValue.class, "cache", Object.class);
-            } catch (NoSuchFieldException | IllegalAccessException e) {
-                throw new RuntimeException(e);
             }
         }
     }
